# GQCP

./: .buildinfo  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  Dockerfile  Dockerfile-dev  INSTALL.md  README.md  Vagrantfile  conda_build_config.yaml  docker-compose.yml  environment.yml  genindex.html  hallo.md  landing-page.html  objects.inv  search.html  searchindex.js  setup.py
benchmarks/: CMakeLists.txt  doci_matvec.cpp
benchmarks/DOCI/: CMakeLists.txt  doci_case.cpp  doci_matrix.cpp  doci_matvec.cpp
benchmarks/FCI/: CMakeLists.txt  fci_coupling.cpp  fci_hchain.cpp  fci_matrix.cpp  fci_matvec.cpp  fci_matvec_preset.cpp
benchmarks/FockSpace/: fockspace_one_electron_matvec.cpp
benchmarks/Hubbard/: CMakeLists.txt  hubbard_diagonalization.cpp  hubbard_matrix.cpp  hubbard_matvec.cpp
benchmarks/benchmark_input/: co_631g_klaas.FCIDUMP
drivers/: CMakeLists.txt  fci_lowdin.cpp  hubbard.cpp  oo_doci.cpp
exe/: CMakeLists.txt  fci_lowdin.cpp  hubbard.cpp  hubbard_console.cpp  main.cpp  oo_doci.cpp  oo_doci_rhf.cpp
gqcp/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
gqcp/benchmarks/: CMakeLists.txt
gqcp/gqcp/: Makefile  cmake_install.cmake
gqcp/gqcpy/: CTestTestfile.cmake  Makefile  __init__.py  cmake_install.cmake  setup.py
gqcp/include/: CMakeLists.txt  gqcp.hpp
gqcp/src/: CMakeLists.txt
gqcp/tests/: CMakeLists.txt
gqcpy/: CMakeLists.txt  __init__.py.in  bindings.cpp  gqcpy.cpp  setup.py.in  version.cpp
gqcpy/Basis/: CMakeLists.txt
gqcpy/Molecule/: CMakeLists.txt  Molecule.cpp
gqcpy/Operator/: CMakeLists.txt
gqcpy/PyClasses/: CMakeLists.txt  Nucleus.cpp  SpinorBasis.cpp
gqcpy/QCMethod/: CMakeLists.txt  DOCINewtonOrbitalOptimizer.cpp  DOCIRHF.cpp  FCI.cpp  FukuiDysonAnalysis.cpp  Hubbard.cpp  MullikenConstrainedFCI.cpp
gqcpy/examples/: AP1roG calculations.ipynb  CCD.ipynb  CCSD.ipynb  Complex valued Hartree-Fock.ipynb  Custom algorithms showcase - CUHF.ipynb  DOCI.ipynb  Dyson orbitals.ipynb  FCI.ipynb  Generalized Hartree-Fock.ipynb  HF Stability.ipynb  Hubbard.ipynb  Mulliken population.ipynb  ONVPath.ipynb  R-U-GHF overlaps.ipynb  README.md  RHF dipole moments.ipynb  Spinor bases.ipynb  Try-out-Binder.ipynb  Try-out-Colab.ipynb  UHF calculations.ipynb  try_it_out.ipynb
gqcpy/include/: CMakeLists.txt  interfaces.hpp  utilities.hpp
gqcpy/src/: CMakeLists.txt
gqcpy/tests/: CMakeLists.txt  SpinorBasis_test.py  docirhf_binding_test.py  fci_binding_test.py  fukui_dyson_binding_test.py  hubbard_binding_test.py  molecule_test.py  mullikenConstrained_binding_test.py  oo-doci_binding_test.py  test_bindings.py  test_version.py
include/: AOBasis.hpp  AddressingScheme.hpp  Atom.hpp  BaseElectronIntegrals.hpp  BaseOperator.hpp  CMakeLists.txt  CartesianGTO.cpp  CartesianGTO.hpp  Configuration.hpp  DOCINewtonOrbitalOptimizer.hpp  HoppingMatrix.cpp  HoppingMatrix.hpp  JacobiRotationParameters.hpp  LibintCommunicator.hpp  LibintInterfacer.hpp  Molecule.hpp  ONV.hpp  OneElectronOperator.hpp  OrbitalOptimizationOptions.hpp  PlainRHFSCFSolver.hpp  RHF.cpp  RHF.hpp  RHFSCFSolver.cpp  RHFSCFSolver.hpp  RMP2.hpp  TwoElectronOperator.hpp  WaveFunction.hpp  common.hpp  elements.hpp  gqcp.hpp  miscellaneous.hpp  properties.hpp  temp.hpp  typedefs.hpp  units.hpp  version.hpp.in
include/AP1roG/: AP1roG.hpp  AP1roGGeminalCoefficients.hpp  AP1roGGeminalCoefficients.hpp~HEAD  AP1roGJacobiOrbitalOptimizer.hpp  AP1roGPSESolver.hpp
include/Basis/: AOBasis.hpp  BaseOneElectronIntegralBuffer.hpp  BaseOneElectronIntegralEngine.hpp  BaseTwoElectronIntegralBuffer.hpp  BaseTwoElectronIntegralEngine.hpp  BasisFunction.hpp  CMakeLists.txt  CartesianDirection.hpp  CartesianExponents.hpp  CartesianGTO.hpp  GTOBasisSet.hpp  GTOShell.hpp  IntegralCalculator.hpp  IntegralEngine.hpp  LibcintInterfacer.hpp  LibcintOneElectronIntegralBuffer.hpp  LibcintOneElectronIntegralEngine.hpp  LibcintTwoElectronIntegralBuffer.hpp  LibcintTwoElectronIntegralEngine.hpp  Libint2OneElectronIntegralEngine.hpp  LibintInterfacer.hpp  LibintOneElectronIntegralBuffer.hpp  LibintOneElectronIntegralEngine.hpp  LibintTwoElectronIntegralBuffer.hpp  LibintTwoElectronIntegralEngine.hpp  OneElectronIntegralEngine.hpp  RSpinorBasis.hpp  SPBasis.hpp  ScalarBasis.hpp  Shell.hpp  ShellSet.hpp  SingleParticleBasis.hpp  TransformationMatrix.hpp  transform.hpp
include/CISolver/: CISolver.hpp  CMakeLists.txt
include/Drivers/: CMakeLists.txt  FullConfigurationInteractionDriver.hpp  HubbardDriver.hpp
include/FockSpace/: BaseFockSpace.hpp  BaseFrozenCoreFockSpace.hpp  CMakeLists.txt  Configuration.hpp  EvaluationContainer.hpp  EvaluationIterator.hpp  EvaluationMatrix.hpp  FockPermutator.hpp  FockSpace.hpp  FockSpaceProduct.hpp  FockSpaceType.hpp  FrozenCoreFockSpace.hpp  FrozenFockSpace.hpp  FrozenProductFockSpace.hpp  ONV.hpp  ProductFockSpace.hpp  SelectedFockSpace.hpp  SelectedProductFockSpace.hpp
include/Geminals/: AP1roG.hpp  AP1roGGEminalCoefficients.hpp  AP1roGGeminalCoefficients.hpp  AP1roGJacobiOrbitalOptimizer.hpp  AP1roGLagrangianOptimizer.hpp  AP1roGPSESolver.hpp  AP1roGPSEs.hpp  AP1roGVariables.hpp  (+5 more)
src/: AOBasis.cpp  AddressingScheme.cpp  Atom.cpp  CMakeLists.txt  CartesianGTO.cpp  DOCINewtonOrbitalOptimizer.cpp  HoppingMatrix.cpp  JacobiRotationParameters.cpp  LibintCommunicator.cpp  LibintInterfacer.cpp  Molecule.cpp  ONV.cpp  OneElectronOperator.cpp  RMP2.cpp  TwoElectronOperator.cpp  WaveFunction.cpp  elements.cpp  example_src.cpp  miscellaneous.cpp  properties.cpp
tests/: AOBasis_test.cpp  AddressingScheme_test.cpp  Atom_test.cpp  CMakeLists.txt  CartesianGTO_test.cpp  HoppingMatrix_test.cpp  JacobiRotationParameters_test.cpp  LibintCommunicator_test.cpp  LibintInterfacer_test.cpp  Molecule_test.cpp  ONV_test.cpp  OO_DOCI_test.cpp  OneElectronOperator_test.cpp  PlainRHFSCFSolver_test.cpp  RMP2_test.cpp  TwoElectronOperator_test.cpp  elements_test.cpp  example_test.cpp  miscellaneous_test.cpp  properties_test.cpp  units_test.cpp
(+12251 files in other folders)
