target_sources(gqcp
        PUBLIC
            Atom.hpp
            DOCINewtonOrbitalOptimizer.hpp
            elements.hpp
            gqcp.hpp
            HoppingMatrix.hpp
            JacobiRotationParameters.hpp
            Molecule.hpp
            OrbitalOptimizationOptions.hpp
            RMP2.hpp
            typedefs.hpp
            units.hpp
            version.hpp
        )

add_subdirectory(Basis)
add_subdirectory(CISolver)
add_subdirectory(FockSpace)
add_subdirectory(geminals)
add_subdirectory(HamiltonianBuilder)
add_subdirectory(HamiltonianParameters)
add_subdirectory(Localization)
add_subdirectory(math)
add_subdirectory(properties)
add_subdirectory(RDM)
add_subdirectory(RHF)
add_subdirectory(utilities)
add_subdirectory(WaveFunction)