target_sources(gqcp
        PRIVATE
            Atom.hpp
            elements.hpp
            gqcp.hpp
            HoppingMatrix.hpp
            JacobiRotationParameters.hpp
            Molecule.hpp
            RMP2.hpp
            typedefs.hpp
            units.hpp
        )

add_subdirectory(Basis)
add_subdirectory(CISolver)
add_subdirectory(FockSpace)
add_subdirectory(Geminals)
add_subdirectory(HamiltonianBuilder)
add_subdirectory(HamiltonianParameters)
add_subdirectory(math)
add_subdirectory(Operator)
add_subdirectory(OrbitalOptimization)
add_subdirectory(properties)
add_subdirectory(RDM)
add_subdirectory(RHF)
add_subdirectory(utilities)
add_subdirectory(WaveFunction)
