target_sources(gqcp
        PRIVATE
            elements.hpp
            gqcp.hpp
            HoppingMatrix.hpp
            RMP2.hpp
            typedefs.hpp
            units.hpp
        )

add_subdirectory(Basis)
add_subdirectory(CISolver)
add_subdirectory(FockSpace)
add_subdirectory(Geminals)
add_subdirectory(HamiltonianBuilder)
add_subdirectory(HamiltonianParameters)
add_subdirectory(Mathematical)
add_subdirectory(Molecule)
add_subdirectory(Operator)
add_subdirectory(OrbitalOptimization)
add_subdirectory(Properties)
add_subdirectory(RDM)
add_subdirectory(RHF)
add_subdirectory(Utilities)
add_subdirectory(WaveFunction)
