target_sources(gqcp
        PRIVATE
            Atom.cpp
            elements.cpp
            HoppingMatrix.cpp
            Molecule.cpp
            RMP2.cpp
        )

add_subdirectory(Basis)
add_subdirectory(bindings)
add_subdirectory(CISolver)
add_subdirectory(FockSpace)
add_subdirectory(Geminals)
add_subdirectory(HamiltonianBuilder)
add_subdirectory(HamiltonianParameters)
add_subdirectory(math)
add_subdirectory(OrbitalOptimization)
add_subdirectory(properties)
add_subdirectory(RDM)
add_subdirectory(RHF)
add_subdirectory(utilities)
add_subdirectory(WaveFunction)
