target_sources(gqcp
        PRIVATE
            Atom.cpp
            elements.cpp
            HoppingMatrix.cpp
            Molecule.cpp
            RMP2.cpp
        )

add_subdirectory(Basis)
add_subdirectory(CISolver)
add_subdirectory(FockSpace)
add_subdirectory(Geminals)
add_subdirectory(HamiltonianBuilder)
add_subdirectory(HamiltonianParameters)
add_subdirectory(Mathematical)
add_subdirectory(OrbitalOptimization)
add_subdirectory(Properties)
add_subdirectory(QCMethod)
add_subdirectory(RDM)
add_subdirectory(RHF)
add_subdirectory(Utilities)
add_subdirectory(WaveFunction)
